# Lydlr

./: .env.example  .gitignore  ARCHITECTURE.md  DESIGN_WALKTHROUGH.md  Dockerfile  ENHANCEMENTS_SUMMARY.md  LICENSE  QUICK_START.md  README.md  README_LAUNCH.md  REVOLUTIONARY_SYSTEM_SUMMARY.md  TRAINING_GUIDE.md  commands.txt  commands_organized.txt  docker-compose.yml  launch.json  launch_lydlr.py  launch_lydlr_system.sh  mongo-init.js  quick_start.sh  start-lydlr.sh
backend/: Dockerfile  MIGRATION_NOTES.md  README.md  manage.py  pyproject.toml  pytest.ini  requirements.txt
backend/api/: __init__.py  apps.py  connections.py  consumers.py  device_topics.py  node_manager.py  redis_pubsub.py  ros2_metrics_collector.py  serializers.py  urls.py
backend/api/repositories/: __init__.py  deployment_repository.py  federated_repository.py  metrics_repository.py  model_repository.py  (+1 more)
backend/backend/: __init__.py  asgi.py  routing.py  settings.py  urls.py  wsgi.py
backend/gstreamer/: README.md  __init__.py  admin.py  apps.py  deepstream_plugin.py  gst_pipeline.py  health.py  urls.py  utils.py  views.py
backend/tests/: conftest.py  test_bench_link_policy.py  test_coordinator_integration.py  test_deployment_views.py  test_federated_api.py  test_federated_views.py  test_fleet_bootstrap.py  test_fleet_link_health.py  test_link_policy_modality.py  test_link_policy_module.py  test_link_policy_service.py  test_modality_codec.py  test_model_repository.py  test_node_link_spec.py  test_node_manager.py  test_replay_fixtures.py  test_rl_policy.py  test_serializers.py
docs/: README.md
(+195 files in other folders)
